--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,20 @@
 {% extends 'bootstrap/base.html'%}
 
+{% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+
 <!-- Navbar block  --> 
 {% block navbar %}
 
     {% include 'navbar.html' %}
+
     
 {% endblock %}
+
