--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-
-    </head>
-    <body>
-        <div class="container">
+{%extends 'base.html'%}
+    {% block content %}
+    {% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    {% endblock%}
+    <div class="container">
             <div class="row">
+                    <div class="jumbotron jumbotron-fluid">
+                        <div class="container">
+                       <p> <img src="{{url_for('static' ,filename='img/clean.jpg')}}"></p>
+                </div>
+                </div>
                 
             </div>
         </div>
-    </body>
-</html>
+  
+    {%endblock%}
